--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "svelte-spa-router": "^3.2.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "mongoose": "^5.13.2",
     "sirv-cli": "^1.0.0"
   }
